<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">leggo</string>
    <string name="action_settings">Settings</string>
    <string name="action_manage">Manage Feeds</string>
    <string name="google_accounts_title">Google Accounts</string>
    <string name="general_settings_title">General Settings</string>
    <string name="account_title">Account</string>
    <string name="add_account_title">Add Account</string>
    <string name="font_size_title">Font Size</string>
    <string name="feeds_header">Feeds</string>
    <string name="rss_feed">RSS</string>
    <string name="atom_feed">Atom</string>
    <string name="add_feed">Go</string>
    <string name="add_feed_hint">Search for feeds</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="articles_header">Articles</string>
    <string name="splash_text">Loading.</string>
    <string name="mark_as_read">Mark As Read</string>
    <string name="cancel">Cancel</string>
    <string name="add_feeds">Add Feeds</string>
</resources>