<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".ManageActivity" >
	<com.sothree.slidinguppanel.SlidingUpPanelLayout
	    android:id="@+id/manage_sliding_layout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:descendantFocusability="beforeDescendants"
		    android:focusableInTouchMode="true"
		    android:orientation="vertical"
		    android:paddingBottom="10dp" >
		
		    <TextView
		        android:id="@+id/manage_refresh_bar"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="right"
		        android:paddingRight="5dp" />
		
		    <TableLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:background="@drawable/textlines"
		        android:padding="5dp" >
		
		        <TableRow>
		
		            <EditText
		                android:id="@+id/add_feed_uri"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:hint="@string/add_feed_hint"
		                android:inputType="textUri"
		                android:paddingLeft="10dp"
		                android:paddingRight="12dp" />
		
		            <Button
		                android:id="@+id/add_feed"
		                android:layout_width="wrap_content"
		                android:layout_height="32dp"
		                android:onClick="onEnterSearchText"
		                android:text="@string/add_feed"
		                android:textSize="12sp" />
		        </TableRow>
		    </TableLayout>
		
		    <ScrollView
		        android:id="@+id/feed_scroll"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:overScrollMode="never" >
		
		        <LinearLayout
		            android:id="@+id/feed_list"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:columnWidth="60dp"
		            android:gravity="center_horizontal"
		            android:horizontalSpacing="10dp"
		            android:numColumns="2"
		            android:orientation="vertical"
		            android:padding="5dp"
		            android:stretchMode="columnWidth"
		            android:verticalSpacing="5dp" >
		        </LinearLayout>
		    </ScrollView>
		
		</LinearLayout>
		<RelativeLayout
            android:id="@+id/manage_panel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/panelBg" >

            <TextView
                android:id="@+id/manage_popup_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:textSize="14sp" />

            <Button
                android:id="@+id/manage_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:background="@drawable/roundbutton"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/add_feeds"
                android:textSize="14sp" />

            <Button
                android:id="@+id/manage_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:layout_toLeftOf="@+id/manage_ok_button"
                android:background="@drawable/roundbutton"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/cancel"
                android:textSize="14sp" />
        </RelativeLayout>
	</com.sothree.slidinguppanel.SlidingUpPanelLayout>
</RelativeLayout>